# discord-bot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  bot.py  points.json  pyproject.toml  requirements.txt
.github/workflows/: deployment.yml  update-requirements-file.yml
