[tool.poetry]
name = "cyscomvit-bot"
version = "1.3"
description = "CYSCOM VIT's discord bot"
authors = ["CYSCOM VIT <cyscom@vit.ac.in>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.6"
firebase-admin = "^6.2.0"
discord-py = "^2.3.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
